--- a/plugins/org.polarsys.chess.commands/plugin.xml
+++ b/plugins/org.polarsys.chess.commands/plugin.xml
@@ -91,41 +91,6 @@
       </menuContribution>
       <menuContribution
             allPopups="false"
-            locationURI="menu:org.eclipse.ui.main.menu">
-         <menu
-               icon="resources/CHESSicon.gif"
-               id="org.polarsys.chess.mainMenu"
-               label="CHESS">
-            <command
-                  commandId="org.chess.BuildModelInstanceCommandID"
-                  label="Build Instances Model"
-                  style="push">
-               <visibleWhen
-                     checkEnabled="false">
-                  <or>
-                     <with
-                           variable="activeEditorId">
-                        <equals
-                              value="org.eclipse.uml2.uml.editor.presentation.UMLEditorID">
-                        </equals>
-                     </with>
-                     <with
-                           variable="activeEditorInput">
-                        <adapt
-                              type="org.eclipse.core.resources.IResource">
-                           <test
-                                 property="org.eclipse.core.resources.projectNature"
-                                 value="org.polarsys.chess.CHESSNature">
-                           </test>
-                        </adapt>
-                     </with>
-                  </or>
-               </visibleWhen>
-            </command>
-         </menu>
-      </menuContribution>
-      <menuContribution
-            allPopups="false"
             locationURI="menu:org.polarsys.chess.mainMenu">
          <menu
                id="chess.menu.filters.id"
@@ -207,6 +172,33 @@
                   </with>
                </or>
             </visibleWhen>
+         </menu>
+      </menuContribution>
+      <menuContribution
+            allPopups="false"
+            locationURI="popup:org.eclipse.papyrus.views.modelexplorer.modelexplorer.popup">
+         <menu
+               icon="resources/CHESSicon.gif"
+               id="org.polarsys.chess.modelexplorerpopupmenu.id"
+               label="CHESS">
+            <command
+                  commandId="org.chess.BuildModelInstanceCommandID"
+                  label="Build Instances"
+                  style="push">
+               <visibleWhen
+                     checkEnabled="false">
+                  <iterate
+                        ifEmpty="false"
+                        operator="and">
+                     <adapt
+                           type="org.eclipse.emf.ecore.EObject">
+                        <instanceof
+                              value="org.eclipse.uml2.uml.Class">
+                        </instanceof>
+                     </adapt>
+                  </iterate>
+               </visibleWhen>
+            </command>
          </menu>
       </menuContribution>
 
