Bug 758 - ARINCFunction support missing
Change-Id: Ib005c6e91e6dcc748fcd3cb140f9a23e21ec7558
Change in CHESS Core Validation in case of CHRTSpecification related to
an ARINCFunction.
In case of ARINCFunction, validation accepts an occKind like:
(phase=(value=0.0, unit=s))
In case of ARINCFunction and empty occKind, validation raises a Warning
suggesting that the modeler should call "IMA Generate Partition
Schedule".

Change-Id: Ib005c6e91e6dcc748fcd3cb140f9a23e21ec7558
Signed-off-by: Laura Baracchi <laura.baracchi@intecs.it>

--- a/plugins/org.polarsys.chess.validator/plugin.xml
+++ b/plugins/org.polarsys.chess.validator/plugin.xml
@@ -128,6 +128,30 @@
                      class="Comment">
                </target>
             </constraint>
+            
+            
+            <constraint
+                  class="org.polarsys.chess.validator.constraints.EFVRT_02_1"
+                  id="EFVRT_02_1"
+                  isEnabledByDefault="true"
+                  lang="java"
+                  mode="Batch"
+                  name="EFVRT_02_1"
+                  severity="WARNING"
+                  statusCode="ev02">
+               <message>
+                  <!--In the &lt;&lt;CH_RtSpecification&gt;&gt; of the element: [{0}] in the package [{1}] the attribute &quot;occKind&quot; must be Periodic, Sporadic or Burst, otherwise Protection must be Guarded or Concurrent.-->
+                  {1}
+               </message>
+               <description>
+                 The attribute 'occKind' of CHRtSpecification is empty. As it is related to an ARINC Function, &quot;IMA Generate Schedule&quot; should be called!
+               </description>
+               <target
+                     class="Comment">
+               </target>
+            </constraint>
+            
+            
             <constraint
                   class="org.polarsys.chess.validator.constraints.EFVRT_03"
                   id="EFVRT_03"
