--- a/build.properties
+++ b/build.properties
@@ -1,3 +1,19 @@
+###############################################################################
+# Copyright (c) 2011-2016
+# University of Firenze, Italy
+# Intecs S.p.A., Italy
+#   
+# All rights reserved. This program and the accompanying materials
+# are made available under the terms of the Eclipse Public License v1.0
+# which accompanies this distribution, and is available at
+# http://www.eclipse.org/legal/epl-v10.html
+#
+# Contributors:
+# Leonardo Montecchi	lmontecchi@unifi.it
+# Nicholas Pacini		nicholas.pacini@intecs.it
+# 
+###############################################################################
+
 source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
