--- a/plugin.xml
+++ b/plugin.xml
@@ -8,13 +8,13 @@
 	  <command
 	     category="it.unipd.chess.category"
          categoryId="it.unipd.chess.commands.category"
-         id="org.chess.stateBasedTransformationCommandID"
+         id="org.polarsys.chess.stateBasedTransformationCommandID"
          name="stateBasedTransformationCommand">
       </command>
    <command
          category="it.unipd.chess.category"
          categoryId="it.unipd.chess.commands.category"
-         id="org.chess.stateBasedWithParametersCommandID"
+         id="org.polarsys.chess.stateBasedWithParametersCommandID"
          name="stateBasedWithParametersCommand">
    </command>
    </extension>
@@ -35,7 +35,7 @@
                      id="chess.menu.analysis.dependability.id"
                      label="Dependability">
                   <command
-                        commandId="org.chess.stateBasedTransformationCommandID"
+                        commandId="org.polarsys.chess.stateBasedTransformationCommandID"
                         label="State-Based"
                         style="push">
                      <visibleWhen
@@ -61,7 +61,7 @@
                      </visibleWhen>
                   </command>
                   <command
-                        commandId="org.chess.stateBasedWithParametersCommandID"
+                        commandId="org.polarsys.chess.stateBasedWithParametersCommandID"
                         label="State-Based (With External Parameters)"
                         style="push">
                      <visibleWhen
@@ -99,11 +99,11 @@
    <extension
          point="org.eclipse.ui.handlers">
       <handler
-     		class="org.chess.statebased.StateBasedTransformationCommand"
-            commandId="org.chess.stateBasedTransformationCommandID">
+     		class="org.polarsys.chess.statebased.StateBasedTransformationCommand"
+            commandId="org.polarsys.chess.stateBasedTransformationCommandID">
       	<enabledWhen>
       		<with
-				variable="org.chess.statebased.stateBased">
+				variable="org.polarsys.chess.statebased.stateBased">
 				<equals
 					value="enabled">
 				</equals>
@@ -111,11 +111,11 @@
 		</enabledWhen>
       </handler>
       <handler
-            class="org.chess.statebased.StateBasedWithParametersCommand"
-            commandId="org.chess.stateBasedWithParametersCommandID">
+            class="org.polarsys.chess.statebased.StateBasedWithParametersCommand"
+            commandId="org.polarsys.chess.stateBasedWithParametersCommandID">
          <enabledWhen>
             <with
-                  variable="org.chess.statebased.stateBased">
+                  variable="org.polarsys.chess.statebased.stateBased">
                <equals
                      value="enabled">
                </equals>
@@ -127,9 +127,9 @@
       <extension
          point="org.eclipse.ui.services">
       <sourceProvider
-            provider="org.chess.statebased.StateBasedSourceProvider">
+            provider="org.polarsys.chess.statebased.StateBasedSourceProvider">
          <variable
-               name="org.chess.statebased.stateBased"
+               name="org.polarsys.chess.statebased.stateBased"
                priorityLevel="workbench">
          </variable>
       </sourceProvider>
@@ -139,7 +139,7 @@
        point="org.polarsys.chess.selectionListener">
     <listener
           name="selection listener statebased"
-          realization="org.chess.statebased.SelectionListenerForStateBased">
+          realization="org.polarsys.chess.statebased.SelectionListenerForStateBased">
     </listener>    
     
  </extension>
@@ -147,8 +147,8 @@
          point="org.eclipse.ui.preferencePages">
       <page
             category="org.polarsys.chess.preferences"
-            class="org.chess.statebased.preferences.StateBasedPreferencePage"
-            id="org.chess.statebased.page"
+            class="org.polarsys.chess.statebased.preferences.StateBasedPreferencePage"
+            id="org.polarsys.chess.statebased.page"
             name="StateBased Preferences">
       </page>
    </extension>
