Rename state-based analaysis feature for Polarsys. Add licence.

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.chess.statebased.feature</name>
+	<name>org.polarsys.chess.statebased.feature</name>
 	<comment></comment>
 	<projects>
 	</projects>
