Adds CHESS View category
Change-Id: Ie8b973515f137bac7671058c06c87688f6716f1d

--- a/plugins/org.polarsys.chess.core/plugin.xml
+++ b/plugins/org.polarsys.chess.core/plugin.xml
@@ -94,4 +94,11 @@
             class="org.polarsys.chess.core.internal.preferences.ConstraintPreferenceInitializer">
       </initializer>
    </extension>
+   <extension
+         point="org.eclipse.ui.views">
+      <category
+            id="org.polarsys.chess.core.view"
+            name="CHESS">
+      </category>
+   </extension>
 </plugin>
