--- a/plugins/org.polarsys.chess.validator/plugin.xml
+++ b/plugins/org.polarsys.chess.validator/plugin.xml
@@ -817,6 +817,25 @@ Package, Component, Property, Connector, &lt;&lt;CH_RtSpecificaiton&gt;&gt; Comm
                <target class="Port">
                </target>
             </constraint>
+            
+            <constraint
+                  class="org.polarsys.chess.validator.constraints.ArincProc_01"
+                  id="ArincProc_01"
+                  isEnabledByDefault="true"
+                  lang="java"
+                  mode="Batch"
+                  name="ArincProc_01"
+                  severity="ERROR"
+                  statusCode="ArincProc_01">
+               <message>
+                  {1}
+               </message>
+               <description>
+                  The ARINCProcess must have OperationsGroups not empty and not NULL.
+               </description>
+               <target class="Operation">
+               </target>
+            </constraint>
              
             <!--constraint
                   id="FV_01"
