Bug 842 - EFVRT_03 code should be made more robust
EFVRT_03 validation should manage correctly the case of empty WCET. 

Change-Id: I615374441bafe59c5a06939bf7cd6b1b945e0f12
Signed-off-by: Laura Baracchi <laura.baracchi@intecs.it>

--- a/plugins/org.polarsys.chess.validator/plugin.xml
+++ b/plugins/org.polarsys.chess.validator/plugin.xml
@@ -269,7 +269,7 @@
                      class="Comment">
                </target> 
                <message>
-                  In the&lt;&lt;CH_RtSpecification&gt;&gt; of the element: [{0}] the attribute &quot;localWCET&quot; must be &gt;= 0 (or null). {1} 
+                  In the&lt;&lt;CH_RtSpecification&gt;&gt; of the element: [{0}] the attribute &quot;localWCET&quot; must be &gt;= 0. {1} 
                </message>
                <description>
                 In CH_RtSpecification attribute localWCET must be >= 0
