--- a/plugins/org.polarsys.chess.multicore/plugin.xml
+++ b/plugins/org.polarsys.chess.multicore/plugin.xml
@@ -86,7 +86,7 @@
                                  type="org.eclipse.core.resources.IResource">
                               <test
                                     property="org.eclipse.core.resources.projectNature"
-                                    value="org.polarsys.chess.multicore.CHESSNature">
+                                    value="org.polarsys.chess.CHESSNature">
                               </test>
                            </adapt>
                         </with>
@@ -112,7 +112,7 @@
                                  type="org.eclipse.core.resources.IResource">
                               <test
                                     property="org.eclipse.core.resources.projectNature"
-                                    value="org.polarsys.chess.multicore.CHESSNature">
+                                    value="org.polarsys.chess.CHESSNature">
                               </test>
                            </adapt>
                         </with>
@@ -138,7 +138,7 @@
                                  type="org.eclipse.core.resources.IResource">
                               <test
                                     property="org.eclipse.core.resources.projectNature"
-                                    value="org.polarsys.chess.multicore.CHESSNature">
+                                    value="org.polarsys.chess.CHESSNature">
                               </test>
                            </adapt>
                         </with>
