--- a/plugins/org.polarsys.chess.m2m/plugin.xml
+++ b/plugins/org.polarsys.chess.m2m/plugin.xml
@@ -42,12 +42,29 @@
          point="org.eclipse.ui.menus">
          
          <menuContribution locationURI="popup:org.eclipse.papyrus.views.modelexplorer.modelexplorer.popup">
- 			<command
-   				commandId="org.polarsys.chess.m2m.commands.CompareAnalysisResultsCommandID"
-   				id="org.polarsys.chess.m2m.commands.CompareAnalysisResultsMenuID"   
-   				label="Compare Analysis Results"
-  				style="push">
- 			</command>
+    <menu
+          id="org.polarsys.chess.modelexplorerpopupmenu.id"
+          label="CHESS">
+       <command
+             commandId="org.polarsys.chess.m2m.commands.CompareAnalysisResultsCommandID"
+             id="org.polarsys.chess.m2m.commands.CompareAnalysisResultsMenuID"
+             label="Compare Analysis Results"
+             style="push">
+          <visibleWhen
+                checkEnabled="false">
+             <iterate
+                   ifEmpty="false"
+                   operator="and">
+                <adapt
+                      type="org.eclipse.emf.ecore.EObject">
+                   <instanceof
+                         value="org.eclipse.uml2.uml.Class">
+                   </instanceof>
+                </adapt>
+             </iterate>
+          </visibleWhen>
+       </command>
+    </menu>
   		 </menuContribution>
   
       <menuContribution
