--- a/plugins/org.polarsys.chess.tabbedproperties/plugin.xml
+++ b/plugins/org.polarsys.chess.tabbedproperties/plugin.xml
@@ -47,7 +47,7 @@
 	</propertySections>
 </extension>
 
-<extension point="org.eclipse.papyrus.views.properties.context">
+<extension point="org.eclipse.papyrus.infra.properties.contexts">
       <context contextModel="CHESS.ctx">
       </context>
    </extension>
