[1821] Refinement of strong and weak contracts
Support for alternative way of checking contract refinement with OCRA tool by distinguishing between strong and weak contracts. The corresponding MTL transformation updated, new command for validation of weak contracts added as well as update of contract statusses upon validation check.

Bug: https://bugs.polarsys.org/show_bug.cgi?id=1821
Signed-off-by: Irfan Sljivo <irfan.sljivo@gmail.com>

--- a/plugins/contracts/org.polarsys.chess.contracts.transformations/plugin.xml
+++ b/plugins/contracts/org.polarsys.chess.contracts.transformations/plugin.xml
@@ -46,6 +46,12 @@
             id="org.polarsys.chess.contracts.transformations.fta3.id"
             name="FTA NuSMV3">
       </command>
+      <command
+            categoryId="org.polarsys.chess.contracts.category"
+            defaultHandler="org.polarsys.chess.contracts.transformations.commands.CheckValidPropHandler"
+            id="org.polarsys.chess.contracts.transformations.validProp.id"
+            name="Validate Properties">
+      </command>
    </extension>
    <extension
          point="org.eclipse.ui.menus">
@@ -82,6 +88,28 @@
                            </with>
                         </or>
                      </visibleWhen>
+                </command>
+                <command
+                      commandId="org.polarsys.chess.contracts.transformations.validProp.id"
+                      label="Validate Properties (OCRA)"
+                      style="push">
+                   <visibleWhen
+                         checkEnabled="false">
+                      <or>
+                         <with
+                               variable="activeEditorId">
+                            <equals
+                                  value="org.eclipse.uml2.uml.editor.presentation.UMLEditorID">
+                            </equals>
+                         </with>
+                         <with
+                               variable="activeEditorInput">
+                            <adapt
+                                  type="org.eclipse.core.resources.IResource">
+                            </adapt>
+                         </with>
+                      </or>
+                   </visibleWhen>
                 </command>
                 <!--command
                       commandId="org.polarsys.chess.contracts.transformations.impl.id"
