added 'icon' folder to binary build

--- a/plugins/contracts/org.polarsys.chess.contracts.transformations/build.properties
+++ b/plugins/contracts/org.polarsys.chess.contracts.transformations/build.properties
@@ -20,5 +20,6 @@ bin.includes = META-INF/,\
                tasks/,\
                build.properties,\
                build.acceleo,\
-               plugin.properties
+               plugin.properties,\
+               icons/
 customBuildCallbacks = build.acceleo
